--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "taskflow-pro",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "main": "main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "electron": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron public/electron.js\"",
-    "electron-dev": "NODE_ENV=development npm run electron",
+    "electron": "electron .",
+    "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
     "build-electron": "npm run build && electron-builder",
     "dist": "npm run build && electron-builder --publish=never",
     "dist-mac": "npm run build && electron-builder --mac",
@@ -20,8 +21,7 @@
     "better-sqlite3": "^12.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sqlite3": "^5.1.7"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -42,7 +42,5 @@
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2",
     "wait-on": "^7.2.0"
-  },
-  "main": "main.js"
   }
 }
