Fix Electron build configuration for main.js

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "main.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "electron": "electron .",
     "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && cross-env NODE_ENV=development electron . --dev\"",
-    "build-electron": "npm run build && electron-builder",
+    "build-electron": "npm run build && electron-builder --publish=never",
     "dist": "npm run build && electron-builder --publish=never",
     "dist-mac": "npm run build && electron-builder --mac",
     "dist-win": "npm run build && electron-builder --win",
