--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview",
     "electron": "electron .",
     "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && cross-env NODE_ENV=development electron . --dev\"",
+    "clean": "rm -rf dist-electron && rm -rf dist",
+    "prebuild-electron": "npm run clean && npm run build",
     "build-electron": "npm run build && electron-builder --publish=never",
-    "dist": "npm run build && electron-builder --publish=never",
-    "dist-mac": "npm run build && electron-builder --mac",
-    "dist-win": "npm run build && electron-builder --win",
-    "dist-linux": "npm run build && electron-builder --linux"
+    "dist": "npm run prebuild-electron && electron-builder --publish=never",
+    "dist-mac": "npm run prebuild-electron && electron-builder --mac --publish=never",
+    "dist-win": "npm run prebuild-electron && electron-builder --win --publish=never",
+    "dist-linux": "npm run prebuild-electron && electron-builder --linux --publish=never"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
