--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview",
     "electron": "electron .",
     "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && cross-env NODE_ENV=development electron . --dev\"",
-    "clean": "rm -rf dist-electron && rm -rf dist && npm run clear-cache",
-    "clear-cache": "npx electron-builder install-app-deps --force",
+    "clean": "rm -rf dist-electron && rm -rf dist",
+    "clear-cache": "npx electron-builder install-app-deps --force && npm cache clean --force",
     "prebuild-electron": "npm run clean && npm run build",
     "build-electron": "npm run build && electron-builder --publish=never",
     "dist": "npm run prebuild-electron && electron-builder --publish=never",
