--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dist-linux": "npm run prebuild-electron && electron-builder --linux --publish=never"
   },
   "dependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "better-sqlite3": "^12.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
