--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:5173 && cross-env NODE_ENV=development electron . --dev\"",
     "clean": "rm -rf dist-electron && rm -rf dist",
     "clear-cache": "npx electron-builder install-app-deps --force && npm cache clean --force",
+    "rebuild": "npm run clear-cache && electron-rebuild",
     "prebuild-electron": "npm run clean && npm run build",
-    "build-electron": "npm run build && electron-builder --publish=never",
+    "build-electron": "npm run build && npx electron-builder install-app-deps && electron-builder --publish=never",
     "dist": "npm run prebuild-electron && electron-builder --publish=never",
     "dist-mac": "npm run prebuild-electron && electron-builder --mac --publish=never",
     "dist-win": "npm run prebuild-electron && electron-builder --win --publish=never",
