--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "better-sqlite3": "^12.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
