--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "rest-express",
   "version": "1.0.0",
   "type": "module",
+  "main": "main.js",
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
+    "electron": "electron .",
+    "electron-dev": "NODE_ENV=development electron .",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
