Fix Windows NODE_ENV environment variable issue

--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "main.cjs",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/index.js",
-    "electron": "electron .",
-    "electron-dev": "NODE_ENV=development electron .",
+    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
+    "electron": "cross-env NODE_ENV=development electron .",
+    "electron-dev": "cross-env NODE_ENV=development electron .",
+    "dev:windows": "set NODE_ENV=development && tsx server/index.ts",
+    "electron:windows": "set NODE_ENV=development && electron .",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -51,7 +54,6 @@
     "cmdk": "^1.1.1",
     "concurrently": "^9.2.0",
     "connect-pg-simple": "^10.0.0",
-    "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
@@ -100,6 +102,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "cross-env": "^7.0.3",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
